--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,29 @@
 # Dockerfile.dev
 FROM python:3.12-slim
 
-# 日本語フォントのみ（ログやPDFで文字化け防止したい場合）
+# ===== 基本環境 =====
 RUN apt-get update && apt-get install -y \
     fonts-noto-cjk \
+    libnss3 \
+    libatk-bridge2.0-0 \
+    libgtk-3-0 \
+    libasound2 \
+    libx11-xcb1 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxrandr2 \
+    libgbm1 \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libcups2 \
  && rm -rf /var/lib/apt/lists/*
 
-# Python依存関係
+# ===== Python依存関係 =====
 COPY requirements.txt /tmp/requirements.txt
 RUN pip install -U pip && pip install -r /tmp/requirements.txt
 
+# ===== Playwrightとブラウザをインストール =====
+RUN pip install playwright && playwright install --with-deps chromium
+
+# ===== 作業ディレクトリ =====
 WORKDIR /app
