--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,9 @@
 # Dockerfile.dev
 FROM python:3.12-slim
 
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1
+
 # ===== 基本環境 =====
 RUN apt-get update && apt-get install -y \
     fonts-noto-cjk \
